# Cinema

./: README.md
CinemaClient/: CMakeLists.txt
CinemaClient/Images/: Undo-icon1.xpm  arrow.xpm  delete.xpm  dolar.xpm  edit.xpm  info.xpm
CinemaClient/program/: CMakeLists.txt
CinemaClient/program/src/: main.cpp
CinemaServer/: Active_movies.sqlite  Active_users.sqlite  AdminData.sqlite  Functions.py  InActive_movies.sqlite  InActive_users.sqlite  ScreeningRooms.sqlite  mainDriver.py
